--- a/manifest.json
+++ b/manifest.json
@@ -226,7 +226,9 @@
 					"fonts/mui.ttf",
 					"css/mui.min.css",
 					"html/list/list.html",
-					"html/main/tab-webview-subpage-about.html"
+					"html/main/tab-webview-subpage-about.html",
+					"html/main/tab-webview-subpage-setting.html",
+					"html/main/tab-webview-subpage-product.html"
 				],
 				"refer": [
 					"html/log/login.html",
@@ -234,7 +236,9 @@
 					"html/record/record.html",
 					"html/main/tab-webview-subpage-chat.html",
 					"html/main/tab-webview-subpage-contact.html",
-					"html/main/tab-webview-subpage-setting.html"
+					"html/main/tab-webview-subpage-phoneprofit.html",
+					"html/main/tab-webview-subpage-order.html",
+					"html/main/tab-webview-subpage-chargeprofit.html"
 				],
 				"priority": 0
 			},
@@ -340,6 +344,46 @@
 				"priority": 0
 			},
 			"html/main/tab-webview-subpage-about.html": {
+				"resources": [
+					"js/mui.min.js",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/main/tab-webview-subpage-order.html": {
+				"resources": [
+					"js/mui.min.js",
+					"css/mui.min.css",
+					"fonts/mui.ttf",
+					"js/h.min.js"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/main/tab-webview-subpage-chargeprofit.html": {
+				"resources": [
+					"js/mui.min.js",
+					"fonts/mui.ttf",
+					"css/mui.min.css",
+					"css/main.css",
+					"css/common.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/main/tab-webview-subpage-phoneprofit.html": {
+				"resources": [
+					"css/main.css",
+					"js/mui.min.js",
+					"css/common.css",
+					"fonts/mui.ttf",
+					"css/mui.min.css"
+				],
+				"refer": [],
+				"priority": 0
+			},
+			"html/main/tab-webview-subpage-product.html": {
 				"resources": [
 					"js/mui.min.js",
 					"css/mui.min.css"
